Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10289

Android: The SDK root variable used by androiddeployqt is not set by Creator

    XMLWordPrintable

Details

    Description

      In Qt Creator, before building/packaging/deploying, we set ANDROID_HOME so that the ant scripts can find the correct Android SDK location, but never set ANDROID_SDK_ROOT, which is used by qmake.conf.

      The result is that androiddeployqt, when running against the SDK, will try to use the SDK path from the build machine because it's not overridden, so using Qt Creator for Android only works with home-built Qt versions at the moment.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              dt Daniel Teske
              esabraha Eskil Abrahamsen Blomfeldt
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes