Android: Set ANDROID_SDK_ROOT environment variable

Needed by androiddeployqt

Task-number: QTCREATORBUG-10289

Change-Id: I64abef7278fab5c9261f9f954af416410f69ce0d
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>