src/plugins/android/androidtoolchain.cpp
@@ -124,6 +124,7 @@ void AndroidToolChain::addToEnvironment(Environment &env) const
     if (!javaHome.isEmpty() && QFileInfo(javaHome).exists())
         env.set(QLatin1String("JAVA_HOME"), javaHome);
     env.set(QLatin1String("ANDROID_HOME"), AndroidConfigurations::instance().config().sdkLocation.toString());
+    env.set(QLatin1String("ANDROID_SDK_ROOT"), AndroidConfigurations::instance().config().sdkLocation.toString());
 }
 
 bool AndroidToolChain::operator ==(const ToolChain &tc) const
